--- a/JavaScript/Game/carrotGame/style.css
+++ b/JavaScript/Game/carrotGame/style.css
@@ -1,67 +1,72 @@
-button {
-  border: none;
-  outline: none;
-  cursor: pointer;
-}
-
 body {
   text-align: center;
+  background-color: black;
 }
+
+button {
+  outline: none;
+  cursor: pointer;
+  border: none;
+  background: white;
+  border-radius: 20%;
+  padding: 0;
+}
+
 .game {
   display: flex;
   flex-direction: column;
-  margin: auto;
+  position: relative;
+  border-radius: 20px;
   width: 800px;
   height: 500px;
-  border-radius: 20px;
-  background: url(img/background.png) center/cover;
+  margin: auto;
+  margin-top: 50px;
+  background: url(img/background.png) center/cover no-repeat;
 }
 
-.game_header {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  align-items: center;
+header {
+  text-align: center;
+  padding: 8px;
 }
 
-.game_button {
+.game__button {
   width: 60px;
   height: 60px;
+  font-size: 24px;
   background-color: wheat;
   border: 4px solid black;
-  font-size: 24px;
-  transition: transform 300ms ease-in;
+  transition: transfrom 300ms ease-in;
 }
 
-.game_button:hover {
+.game__button:hover {
   transform: scale(1.1);
 }
 
-.game_timer {
+.game__timer {
+  display: block;
   width: 100px;
+  margin: auto;
+  margin-top: 8px;
+  padding: 0 20px;
   background-color: white;
-  text-align: center;
-  border: 4px solid black;
   border-radius: 10px;
-  font-size: 30px;
-  margin-top: 10px;
-  visibility: hidden;
+  font-size: 32px;
+  border: 5px solid black;
 }
 
-.game_score {
+.game__score {
+  display: inline-block;
   width: 50px;
   height: 50px;
-  font-size: 45px;
-  background-color: orange;
+  font-size: 46px;
+  margin-top: 4px;
+  background-color: darksalmon;
   color: white;
-  border: 3px solid black;
   border-radius: 50%;
-  text-align: center;
-  margin-top: 10px;
-  visibility: hidden;
+  border: 3px solid black;
 }
 
-.game_field {
+.game__field {
   position: relative;
   width: 100%;
   height: 100%;
@@ -69,31 +74,42 @@ body {
 }
 
 .pop-up {
-  width: 400px;
-  height: 140px;
-  margin: auto;
-  padding: 20px;
   border-radius: 20px;
+  width: 400px;
+  height: 124px;
+  margin: auto;
   background-color: #00000090;
   color: white;
-  text-align: center;
   transform: translateY(-150%);
 }
 
-.pop-up-hide {
+.pop-up--hide {
   display: none;
 }
 
-.pop-up_refresh {
+.pop-up__refresh {
   width: 60px;
   height: 60px;
   font-size: 24px;
   background-color: wheat;
-  border-radius: 50%;
-  border: orange 3px solid;
+  border: 2px solid black;
+  transition: transfrom 300ms ease-in;
 }
 
-.pop-up_message {
+.pop-up__refresh:hover {
+  transform: scale(1.1);
+}
+
+.pop-up__message {
   display: block;
-  font-size: 32px;
+  font-size: 38px;
+}
+
+.hide {
+  display: none;
+}
+
+.carrot:hover,
+.bug:hover {
+  transform: scale(1.1);
 }
