--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -95,11 +95,19 @@ p {
 
 /* Navbar */
 #navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  background-color: var(--color-pink);
+  background-color: transparent;
+  transition: all var(--animation-duration) ease-in-out;
+}
+
+#navbar.navbar--dark {
+  background-color: gray;
+  padding: 3px;
 }
 
 .navbar__logo {
@@ -140,8 +148,9 @@ p {
 
 /* Home */
 #home {
-  background: url("imgs/home-background.png") center/cover no-repeat;
+  background-color: black;
   padding: 40px;
+  padding-top: 100px;
   text-align: center;
 }
 
