--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -126,16 +126,13 @@ p {
   margin: 0 4px;
   color: var(--color-white);
   cursor: pointer;
-}
-
-.navbar__menu__item.active {
-  border: 1px solid white;
+  border: 1px solid transparent;
   border-radius: var(--size-border-radius);
 }
 
 .navbar__menu__item:hover {
-  background-color: var(--color-dark-pink);
-  border-radius: var(--size-border-radius);
+  border-color: white;
+  background-color: var(--color-light-grey);
 }
 
 .navbar__toggle-btn {
@@ -316,13 +313,13 @@ p {
   padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-pink);
   color: var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
   opacity: 1;
   top: 0;
