--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -62,6 +62,7 @@ button {
   cursor: pointer;
   border: none;
   outline: none;
+  padding: 0;
 }
 
 /* Typography */
@@ -107,8 +108,8 @@ p {
 }
 
 #navbar.navbar--dark {
-  background-color: gray;
-  padding: 3px;
+  background-color: var(--color-blue);
+  padding: 8px;
 }
 
 .navbar__logo {
@@ -131,8 +132,9 @@ p {
 }
 
 .navbar__menu__item:hover {
-  border-color: white;
-  background-color: var(--color-light-grey);
+  border-color: var(--color-white);
+  background-color: var(--color-yellow);
+  color: var(--color-blue);
 }
 
 .navbar__toggle-btn {
@@ -146,9 +148,9 @@ p {
 
 /* Home */
 #home {
-  background-color: black;
+  background-color: var(--color-black);
   padding: 40px;
-  padding-top: 100px;
+  padding-top: 120px;
   text-align: center;
 }
 
@@ -174,6 +176,9 @@ p {
   border-radius: var(--size-border-radius);
 }
 
+.home__contact:hover {
+  background-color: var(--color-orange);
+}
 /* Section common */
 .section {
   padding: 50px;
@@ -226,6 +231,11 @@ p {
 .job {
   display: flex;
   align-items: center;
+}
+
+.job__logo {
+  width: 100px;
+  height: 40px;
 }
 
 .job__description {
@@ -311,11 +321,12 @@ p {
   border-radius: var(--size-border-radius);
   font-size: var(--font-regular);
   padding: 8px 48px;
+  position: relative;
 }
 
 .category__btn.selected,
 .category__btn:hover {
-  background-color: var(--color-pink);
+  background-color: var(--color-blue);
   color: var(--color-white);
 }
 
@@ -333,9 +344,9 @@ p {
   height: 24px;
   line-height: 24px;
   display: inline-block;
-  position: relative;
+  position: absolute;
   top: -20px;
-  left: 4px;
+  right: 16px;
   opacity: 0;
   transition: all var(--animation-duration) ease-in;
 }
@@ -405,7 +416,7 @@ p {
   left: 50%;
   width: 50px;
   height: 2px;
-  transform: translate(-50%);
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
@@ -454,7 +465,7 @@ p {
 
 /* Contact */
 #contact {
-  background-color: var(--color-black);
+  background-color: var(--color-blue);
 }
 
 .contact__title,
@@ -478,16 +489,16 @@ p {
   color: var(--color-yellow);
 }
 
-/* */
+/* Scroll */
 .arrow-up {
   position: fixed;
   bottom: 50px;
   right: 50px;
-  width: 50px;
-  height: 50px;
-  font-size: 30px;
-  background-color: var(--color-dark-grey);
-  color: var(--color-light-white);
+  width: 70px;
+  height: 70px;
+  font-size: 50px;
+  color: var(--color-white);
+  background-color: var(--color-blue);
   border-radius: 50%;
   opacity: 0;
   pointer-events: none;
@@ -501,20 +512,31 @@ p {
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
+  :root {
+    /* Font size */
+    --font-large: 30px;
+    --font-medium: 18px;
+    --font-regular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
+  }
+
   .navbar__toggle-btn {
     display: block;
+    top: 16px;
+    right: 16px;
+    font-size: var(--font-medium);
   }
 
   #navbar {
     flex-direction: column;
     align-items: flex-start;
-    background-color: var(--color-light-grey);
+    background-color: var(--color-blue);
   }
 
   #navbar.navbar--dark {
     padding: 16px;
   }
-
   .navbar__menu {
     flex-direction: column;
     text-align: center;
@@ -526,24 +548,60 @@ p {
     display: block;
   }
 
+  .section {
+    padding: 16px;
+    padding-top: 40px;
+  }
+
   .about__majors {
     flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
 
   .major {
-    margin-bottom: 38px;
+    margin-bottom: 30px;
   }
 
   .skillset {
     flex-direction: column;
   }
 
+  .category__btn {
+    margin: 4px 0;
+    width: 100%;
+  }
+
   .project {
     flex-grow: 1;
   }
 
+  .testimonial {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .testimonial__avatar {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
+  }
+
+  .testimonial__avatar:nth-child(even),
+  .testimonial__avatar:nth-child(odd) {
+    margin: 0;
+    margin-bottom: 8px;
+  }
+
+  .testimonial__speech-bubble {
+    order: 1;
+  }
+
+  .arrow-up {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
+    right: 16px;
+    bottom: 16px;
   }
 }
