--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -109,7 +109,7 @@ p {
 
 #navbar.navbar--dark {
   background-color: var(--color-blue);
-  padding: 8px;
+  padding: 3px;
 }
 
 .navbar__logo {
@@ -127,8 +127,11 @@ p {
   margin: 0 4px;
   color: var(--color-white);
   cursor: pointer;
-  border: 1px solid transparent;
   border-radius: var(--size-border-radius);
+}
+
+.navbar__menu__item.active {
+  border: 1px solid white;
 }
 
 .navbar__menu__item:hover {
